<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_student"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_month_student"
            android:icon="@drawable/ic_month"
            android:title="@string/menu_month" />
        <item
            android:id="@+id/nav_semestr_student"
            android:icon="@drawable/ic_semestr"
            android:title="@string/menu_semestr" />
        <item
            android:id="@+id/nav_settings_student"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>