<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home_student">

    <fragment
        android:id="@+id/nav_home_student"
        android:name="com.example.zachetka.student.studentMainFragments.home.HomeStudentFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_student" />

    <fragment
        android:id="@+id/nav_month_student"
        android:name="com.example.zachetka.student.studentMainFragments.month.MonthStudentFragment"
        android:label="@string/menu_month"
        tools:layout="@layout/fragment_month_student" />

    <fragment
        android:id="@+id/nav_semestr_student"
        android:name="com.example.zachetka.student.studentMainFragments.semestr.SemestrStudentFragment"
        android:label="@string/menu_semestr"
        tools:layout="@layout/fragment_semestr_student" />

    <fragment
        android:id="@+id/nav_settings_student"
        android:name="com.example.zachetka.student.studentMainFragments.settings.SettingsStudentFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings_student" />
</navigation>