<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".admin.EditUserModeActivity">

    <TextView
        android:id="@+id/edit_mode_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/rubik"
        android:text="@string/title_edit_mode"
        android:textColor="@color/white"
        android:textSize="30dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edit_mode_text"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="150dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/rubik"
        android:letterSpacing="0"
        android:padding="10dp"
        android:text="@string/button_add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:backgroundTint="@color/button_color"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_add"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="150dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/rubik"
        android:letterSpacing="0"
        android:padding="10dp"
        android:text="@string/button_edit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:backgroundTint="@color/button_color"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_edit"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="150dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/rubik"
        android:letterSpacing="0"
        android:padding="10dp"
        android:text="@string/button_delete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:backgroundTint="@color/button_color"
        tools:ignore="TouchTargetSizeCheck" />

</RelativeLayout>