<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".student.studentMainFragments.home.HomeStudentFragment">

    <TextView
        android:id="@+id/nameRecBookS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/rubik"
        android:shadowColor="#68B2DA"
        android:shadowDx="0"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:text="@string/text_rec_book"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        tools:ignore="SpUsage,TextContrastCheck" />

    <ImageView
        android:id="@+id/ivb_recS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameRecBookS"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:src="@drawable/icon_rec_book"
        android:contentDescription="TODO"
        android:background="@drawable/click_iv"
        tools:ignore="ContentDescription,KeyboardInaccessibleWidget,SpeakableTextPresentCheck" />

    <RelativeLayout
        android:id="@+id/relativeS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivb_recS"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/background_info"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleGradesS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/text_marks"
            android:textAlignment="center"
            android:textColor="@color/button_color"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/noneInfoS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleGradesS"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:fontFamily="@font/rubik_bold"
            android:gravity="center"
            android:padding="3dp"
            android:textAlignment="center"
            android:textColor="@color/button_color"
            android:textSize="16dp"
            android:visibility="gone"/>

        <ScrollView
            android:id="@+id/scrollViewS"
            android:layout_width="match_parent"
            android:layout_height="419dp"
            android:layout_below="@+id/titleGradesS"
            android:layout_marginTop="30dp"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:id="@+id/linearRatingsS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/ratingsS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/disciplineS"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_weight="1"
                            android:fontFamily="@font/rubik_bold"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/text_discipline"
                            android:textAlignment="center"
                            android:textColor="@color/button_color"
                            android:textSize="16dp" />

                        <TextView
                            android:id="@+id/gradeS"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_weight="1"
                            android:fontFamily="@font/rubik_bold"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/text_mark"
                            android:textAlignment="center"
                            android:textColor="@color/button_color"
                            android:textSize="16dp" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>